--- a/index.html
+++ b/index.html
@@ -5,8 +5,9 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Doom Emulator</title>
   <!-- Bootstrap CSS -->
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
-  <style>
+  <link href="./bootstrap.min.css" rel="stylesheet">
+  <link rel="icon" href="./favicon.ico" type="image/x-icon">
+    <style>
     body {
       background-color: #f8f9fa; /* Light, professional background */
       color: #212529; /* Text color for readability */
@@ -59,6 +60,6 @@
   </div>
 
   <!-- Bootstrap Bundle JS -->
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
+  <script src="./bootstrap.bundle.min.js"></script>
 </body>
 </html>
