--- a/dos.html
+++ b/dos.html
@@ -1,6 +1,7 @@
 <!doctype html>
 <html>
 <title>Doom</title>
+<link rel="icon" href="./favicon.ico" type="image/x-icon">
 <head>
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
   <style>
