--- a/doomII/index.html
+++ b/doomII/index.html
@@ -22,10 +22,9 @@
   <script>
     emulators.pathPrefix = "./js-dos/";
 
-    // Adjust the path to point to the correct subfolder
     Dos(document.getElementById("jsdos"), {
-      // Add custom clientId or other settings here if needed
-    }).run("doomII/bundle.jsdos");  <!-- Replace subfolder with your actual folder name -->
+    
+   }).run("doomII/bundle.jsdos");  
   </script>
 </body>
 
