--- a/index.html
+++ b/index.html
@@ -57,6 +57,7 @@
       </ul>
     </section>
     <a href="dos.html" class="btn btn-primary btn-start">Launch Doom Emulator</a>
+    <a href="/doomII/index.html" class="btn btn-primary btn-start">Launch Doom II Emulator</a>
   </div>
 
   <!-- Bootstrap Bundle JS -->
