--- a/doomII/index.html
+++ b/doomII/index.html
@@ -24,7 +24,7 @@
 
     Dos(document.getElementById("jsdos"), {
     
-   }).run("doomII/bundle.jsdos");  
+   }).run("./bundle.jsdos");  
   </script>
 </body>
 
