--- a/doomII/index.html
+++ b/doomII/index.html
@@ -1,6 +1,6 @@
 <!doctype html>
 <html>
-
+<title>Doom II</title>
 <head>
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
   <style>
