--- a/dos.html
+++ b/dos.html
@@ -14,8 +14,8 @@
       padding: 0;
     }
   </style>
-  <script src="js-dos/js-dos.js"></script>
-  <link href="js-dos/js-dos.css" rel="stylesheet">
+  <script src="./js-dos/js-dos.js"></script>
+  <link href="./js-dos/js-dos.css" rel="stylesheet">
 </head>
 
 <body>
@@ -35,7 +35,7 @@
         })
       }
 */      
-    }).run("bundle.jsdos");
+    }).run("./bundle.jsdos");
   </script>
 </body>
 
