--- a/doomII/index.html
+++ b/doomII/index.html
@@ -13,8 +13,8 @@
       padding: 0;
     }
   </style>
-  <script src="js-dos/js-dos.js"></script>
-  <link href="js-dos/js-dos.css" rel="stylesheet">
+  <script src="./js-dos/js-dos.js"></script>
+  <link href="./js-dos/js-dos.css" rel="stylesheet">
 </head>
 
 <body>
