--- a/index.html
+++ b/index.html
@@ -96,11 +96,11 @@
             </div>
             <div class="list-group-item">
                 <h5 class="mb-1">IDCLIP</h5>
-                <p class="mb-1">No Clip Mode - In Final Doom, allows the player to pass through walls. The cheat for No Clipping depends on the game: In the original Doom, it's <strong>IDSPISPOPD</strong>.</p>
+                <p class="mb-1">No Clip Mode - In Final Doom (at least in the emulator), allows the player to pass through walls. The cheat for No Clipping depends on the game: in original Doom, it's <strong>IDSPISPOPD</strong>.</p>
             </div>
             <div class="list-group-item">
                 <h5 class="mb-1">IDSPISPOPD</h5>
-                <p class="mb-1">No Clipping Mode (without the special effects) - In the original Doom, seems to be the only cheat code to let players to pass through walls. This cheat only seems to apply to the emulator.</p>
+                <p class="mb-1">No Clipping Mode (without the special effects) - In the original Doom, seems to be the only cheat code to let players to pass through walls. This restriction only seems to apply to the emulator or the <code>.jsdos</code>bundle used.</p>
             </div>
             <div class="list-group-item">
                 <h5 class="mb-1">IDFA</h5>
