--- a/index.html
+++ b/index.html
@@ -74,8 +74,9 @@
         <li><strong>Bun:</strong> The project uses <code>bun</code> for managing the runtime and build process, ensuring top-notch performance.</li>
       </ul>
     </section>
-    <a href="dos.html" class="btn btn-primary btn-start">Launch Doom Emulator</a>
-    <a href="/doomII/index.html" class="btn btn-primary btn-start">Launch Doom II Emulator</a>
+    <a href="./dos.html" class="btn btn-primary btn-start">Launch Doom Emulator</a>
+    <a href="./doomII/index.html" class="btn btn-primary btn-start">Launch Doom II Emulator</a>
+    <a href="./finaldoom/index.html" class="btn btn-primary btn-start">Launch Doom II Emulator</a>
   </div>
 <div class="container">
     <div class="instructions-container">
@@ -100,7 +101,7 @@
             </div>
             <div class="list-group-item">
                 <h5 class="mb-1">IDSPISPOPD</h5>
-                <p class="mb-1">No Clipping Mode (without the special effects) - In the original Doom, seems to be the only cheat code to let players to pass through walls. This restriction only seems to apply to the emulator or the <code>.jsdos</code>bundle used.</p>
+                <p class="mb-1">No Clipping Mode (without the special effects) - In the original Doom, seems to be the only cheat code to let players to pass through walls. This restriction only seems to apply to the emulator or the <code>.jsdos</code> bundle used.</p>
             </div>
             <div class="list-group-item">
                 <h5 class="mb-1">IDFA</h5>
