--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Doom Emulator</title>
+  <!-- There are no bugs in this code...just demons. -->
+
   <!-- Bootstrap CSS -->
   <link href="./bootstrap.min.css" rel="stylesheet">
   <link rel="icon" href="./favicon.ico" type="image/x-icon">
@@ -76,7 +78,7 @@
     </section>
     <a href="./dos.html" class="btn btn-primary btn-start">Launch Doom Emulator</a>
     <a href="./doomII/index.html" class="btn btn-primary btn-start">Launch Doom II Emulator</a>
-    <a href="./finaldoom/index.html" class="btn btn-primary btn-start">Launch Doom II Emulator</a>
+    <a href="./finaldoom/index.html" class="btn btn-primary btn-start">Launch Final Doom Emulator</a>
   </div>
 <div class="container">
     <div class="instructions-container">
