--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
             </div>
             <div class="list-group-item">
                 <h5 class="mb-1">IDBEHOLD</h5>
-                <p class="mb-1">Power-Up Activation - Followed by a letter to activate various power-ups (e.g., IDBEHOLDI for Invulnerability, IDBEHOLDR for Radiation Suit).</p>
+                <p class="mb-1">Power-Up Activation - Followed by a letter to activate various power-ups (e.g., IDBEHOLDI for invisibility, IDBEHOLDR for Radiation Suit).</p>
             </div>
             <div class="list-group-item">
                 <h5 class="mb-1">IDCLEV</h5>
@@ -121,9 +121,6 @@
                 <h5 class="mb-1">IDMYPOS</h5>
                 <p class="mb-1">Show Player’s Coordinates - Displays the player’s current coordinates in the game.</p>
             </div>
-            <div class="list-group-item">
-                <h5 class="mb-1">IDQUOTES</h5>
-                <p class="mb-1">Display Quotes - Displays a random Doom quote in the console.</p>
             </div>
         </div>
     </div>  
