--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
       <ul>
         <li><strong>js-dos:</strong> A powerful JavaScript-based DOS emulator that allows classic games to run in the browser.</li>
         <li><strong>Bun:</strong> The project uses <code>bun</code> for managing the runtime and build process, ensuring top-notch performance.</li>
-      </ul>
+        <li><strong>NPM:</strong> The classic package manager</li>
     </section>
     <a href="./dos.html" class="btn btn-primary btn-start">Launch Doom Emulator</a>
     <a href="./doomII/index.html" class="btn btn-primary btn-start">Launch Doom II Emulator</a>
