--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
             </div>
             <div class="list-group-item">
                 <h5 class="mb-1">IDCLIP</h5>
-                <p class="mb-1">No Clip Mode - In Final Doom (at least in the emulator), allows the player to pass through walls. The cheat for No Clipping depends on the game: in original Doom, it's <strong>IDSPISPOPD</strong>.</p>
+                <p class="mb-1">No Clip Mode - In Final Doom and Doom II (at least in the emulator), allows the player to pass through walls. The cheat for No Clipping depends on the game: in original Doom, it's <strong>IDSPISPOPD</strong>.</p>
             </div>
             <div class="list-group-item">
                 <h5 class="mb-1">IDSPISPOPD</h5>
