--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <!-- There are no bugs in this code...just demons. -->
  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="description" content="Experience the classic Doom game in your browser using js-dos, Bun, and modern web technologies.">
-  <meta name="author" content="Your Name">
+  <meta name="author" content="lelbois">
   <meta name="keywords" content="Doom Emulator, js-dos, browser games, Doom II, Final Doom, Bun">
   <meta name="theme-color" content="#007bff">
   <meta name="robots" content="index, follow"> 
@@ -146,10 +146,12 @@
 <script src="./bootstrap.bundle.min.js"></script>
 <script src="./demons/darkmode-js.min.js"></script>
 <script>
-  function addDarkmodeWidget() {
-    new Darkmode().showWidget();
-  }
-  window.addEventListener('load', addDarkmodeWidget);
+   function addDarkmodeWidget() {
+      new Darkmode({
+        label: "🌗" // Half-moon/half-sun emoji
+      }).showWidget();
+    }
+    window.addEventListener('load', addDarkmodeWidget);
 </script>
 </body>
 </html>
