--- a/index.html
+++ b/index.html
@@ -1,16 +1,22 @@
 <!DOCTYPE html>
 <html lang="en">
+<!-- Google Tag Manager -->
+<script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
+j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
+'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
+})(window,document,'script','dataLayer','GTM-TKPJD4RG');</script>
+<!-- End Google Tag Manager -->
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Doom Emulator</title>
+  <title>Doom Online</title>
   <!-- There are no bugs in this code...just demons. -->
  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="description" content="Experience the classic Doom game in your browser using js-dos, Bun, and modern web technologies.">
   <meta name="author" content="lelbois">
   <meta name="keywords" content="Doom Emulator, js-dos, browser games, Doom II, Final Doom, Bun">
   <meta name="theme-color" content="#007bff">
-  <meta name="robots" content="index, follow"> 
   <link href="./bootstrap.min.css" rel="stylesheet">
   <link rel="icon" href="./favicon.ico" type="image/x-icon">
     <style>
@@ -65,6 +71,10 @@
   </style>
 </head>
 <body>
+<!-- Google Tag Manager (noscript) -->
+<noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-TKPJD4RG"
+height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+<!-- End Google Tag Manager (noscript) -->
   <div class="container">
    <img src="./demons/absolute_kick_a_bad_a.png" alt="Doomguy Face" />
     <header class="header">
