--- a/index.html
+++ b/index.html
@@ -156,12 +156,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 <script src="./bootstrap.bundle.min.js"></script>
 <script src="./demons/darkmode-js.min.js"></script>
 <script>
-   function addDarkmodeWidget() {
-      new Darkmode({
-        label: "🌗" // Half-moon/half-sun emoji
-      }).showWidget();
-    }
-    window.addEventListener('load', addDarkmodeWidget);
+   function addDarkmodeWidget(){new Darkmode({label:"🌗"}).showWidget()}window.addEventListener("load",addDarkmodeWidget);
 </script>
 </body>
 </html>
