--- a/dos.html
+++ b/dos.html
@@ -33,7 +33,9 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 </head>
 
 <body>
-  <div id="jsdos" />
+<noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-TKPJD4RG"
+height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>  
+<div id="jsdos" />
   <script>
     emulators.pathPrefix = "js-dos/";
     Dos(document.getElementById("jsdos"), {
