--- a/finaldoom/index.html
+++ b/finaldoom/index.html
@@ -1,6 +1,20 @@
 <!doctype html>
 <html>
 <title>Final Doom</title>
+<!-- Google Tag Manager -->
+<script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
+j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
+'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
+})(window,document,'script','dataLayer','GTM-TKPJD4RG');</script>
+<!-- End Google Tag Manager -->
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-1D8RGMK92S');
+</script>
 <head>
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
   <style>
@@ -18,7 +32,9 @@
 </head>
 
 <body>
-  <div id="jsdos" />
+<noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-TKPJD4RG"
+height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+<div id="jsdos" />
   <script>
     emulators.pathPrefix = "js-dos/";
     Dos(document.getElementById("jsdos"), {
