--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
   <meta name="keywords" content="Doom Emulator, js-dos, browser games, Doom II, Final Doom, Bun">
   <meta name="theme-color" content="#007bff">
   <link href="./bootstrap.min.css" rel="stylesheet">
+  <link href="./demons/all.min.css" rel="stylesheet">
   <link rel="icon" href="./favicon.ico" type="image/x-icon">
     <style>
     body {
@@ -74,6 +75,28 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
     .highlight {
       font-weight: bold;
       color: #007bff;
+    }
+  </style>
+ <style>
+    /* Position the GitHub icon in the bottom-right corner */
+    .github-icon {
+      position: fixed;
+      bottom: 20px;
+      right: 20px;
+      font-size: 2rem;  /* Size of the icon */
+      color: #333;  /* Icon color */
+      background-color: #fff;
+      border-radius: 50%;
+      padding: 10px;
+      box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+      transition: all 0.3s ease;
+    }
+
+    /* Hover effect */
+    .github-icon:hover {
+      color: #fff;
+      background-color: #333;
+      transform: scale(1.1);
     }
   </style>
 </head>
@@ -142,7 +165,10 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                 <h5 class="mb-1">IDMYPOS</h5>
                 <p class="mb-1">Show Player’s Coordinates - Displays the player’s current coordinates in the game.</p>
             </div>
-            </div>
+      <a href="https://github.com/linuxfandudeguy/doomonline" target="_blank" class="github-icon">
+      <i class="fab fa-github"></i>
+      </a>
+         </div>
         </div>
     </div>
   <noscript>
