--- a/index.html
+++ b/index.html
@@ -145,6 +145,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 </noscript>
 <script src="./bootstrap.bundle.min.js"></script>
 <script src="./demons/darkmode-js.min.js"></script>
+<script src="./demons/gh.js"></script>
 <script>
    function addDarkmodeWidget(){new Darkmode({label:"🌗"}).showWidget()}window.addEventListener("load",addDarkmodeWidget);
 </script>
