--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
   <meta name="keywords" content="Doom Emulator, js-dos, browser games, Doom II, Final Doom, Bun">
   <meta name="theme-color" content="#007bff">
   <link href="./bootstrap.min.css" rel="stylesheet">
+  <link href="./demons/bootstrap-icons.min.css" rel="stylesheet">
   <link rel="icon" href="./favicon.ico" type="image/x-icon">
     <style>
     body {
@@ -79,10 +80,10 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
         <li><strong>Bun:</strong> The project uses <code>bun</code> for managing the runtime and build process, ensuring top-notch performance.</li>
         <li><strong>NPM:</strong> The classic package manager. Used in conjunction with Bun in this project.</li>
     </section>
-    <a href="./dos.html" class="btn btn-primary btn-start">Launch Doom Emulator</a>
-    <a href="./doomII/index.html" class="btn btn-primary btn-start">Launch Doom II Emulator</a>
-    <a href="./finaldoom/index.html" class="btn btn-primary btn-start">Launch Final Doom Emulator</a>
-  </div>
+    <a href="./dos.html" class="btn btn-primary btn-start"><i class="fas fa-play"></i> Launch Doom Emulator</a>
+    <a href="./doomII/index.html" class="btn btn-primary btn-start"><i class="fas fa-play"></i> Launch Doom II Emulator</a>
+    <a href="./finaldoom/index.html" class="btn btn-primary btn-start"><i class="fas fa-play"></i> Launch Final Doom Emulator</a>  
+</div>
 <div class="container">
     <div class="instructions-container">
       <h2>Game Controls</h2>
