--- a/index.html
+++ b/index.html
@@ -80,9 +80,9 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
         <li><strong>Bun:</strong> The project uses <code>bun</code> for managing the runtime and build process, ensuring top-notch performance.</li>
         <li><strong>NPM:</strong> The classic package manager. Used in conjunction with Bun in this project.</li>
     </section>
-    <a href="./dos.html" class="btn btn-primary btn-start"><i class="fas fa-play"></i> Launch Doom Emulator</a>
-    <a href="./doomII/index.html" class="btn btn-primary btn-start"><i class="fas fa-play"></i> Launch Doom II Emulator</a>
-    <a href="./finaldoom/index.html" class="btn btn-primary btn-start"><i class="fas fa-play"></i> Launch Final Doom Emulator</a>  
+    <a href="./dos.html" class="btn btn-primary btn-start"><i class="bi-play-fill"></i> Launch Doom Emulator</a>
+    <a href="./doomII/index.html" class="btn btn-primary btn-start"><i class="bi-play-fill"></i> Launch Doom II Emulator</a>
+    <a href="./finaldoom/index.html" class="btn btn-primary btn-start"><i class="bi-play-fill"></i> Launch Final Doom Emulator</a>  
 </div>
 <div class="container">
     <div class="instructions-container">
