--- a/index.html
+++ b/index.html
@@ -76,9 +76,11 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
       <p>This project uses <strong>js-dos</strong> to emulate the original Doom experience right in your browser. The setup was created using the <code>bun create dosbox</code> template, making it efficient and modern.</p>
       <h3>How It Works <i class="bi bi-code"></i></h3>
       <ul>
-        <li><strong>js-dos:</strong> A powerful JavaScript-based DOS emulator that allows classic games to run in the browser.</li>
-        <li><strong>Bun:</strong> The project uses <code>bun</code> for managing the runtime and build process, ensuring top-notch performance.</li>
-        <li><strong>NPM:</strong> The classic package manager. Used in conjunction with Bun in this project.</li>
+        <li><strong><i class="bi bi-terminal-fill"></i>js-dos:</strong> A powerful JavaScript-based DOS emulator that allows classic games to run in the browser.</li>
+        <li><strong><i class="bi bi-stack"></i>Bun:</strong> The project uses <code>bun</code> for managing the runtime and build process, ensuring top-notch performance.</li>
+        <li><strong><i class="bi bi-box-seam-fill"></i>NPM:</strong> The classic package manager. Used in conjunction with Bun in this project.</li>
+        <li><strong><i class="bi bi-bootstrap-fill"></i>Bootstrap:</strong>You know how the website looks so nice? Bootstrap utility classes of course.</li>
+        <li><strong><i class="bi bi-brush-fill"></i>Bootstrap Icons:</strong>You know where all these icons are coming from? Bootstrap Icons of course.</li>
     </section>
     <a href="./dos.html" class="btn btn-primary btn-start"><i class="bi bi-play-fill"></i> Launch Doom Emulator</a>
     <a href="./doomII/index.html" class="btn btn-primary btn-start"><i class="bi bi-play-fill"></i> Launch Doom II Emulator</a>
