--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
         <li><strong><i class="bi bi-stack"></i> Bun:</strong> The project uses <code>bun</code> for managing the runtime and build process, ensuring top-notch performance.</li>
         <li><strong><i class="bi bi-box-seam-fill"></i> NPM:</strong> The classic package manager. Used in conjunction with Bun in this project.</li>
         <li><strong><i class="bi bi-bootstrap-fill"></i> Bootstrap:</strong> You know how the website looks so nice? Bootstrap utility classes of course.</li>
-        <li><strong><i class="bi bi-brush-fill"></i> Bootstrap Icons:</strong>All those icons all over the place are from- yep you guessed it, Bootstrap Icons.</li>
+        <li><strong><i class="bi bi-brush-fill"></i> Bootstrap Icons:</strong> All those icons all over the place are from- yep you guessed it, Bootstrap Icons.</li>
     </section>
     <a href="./dos.html" class="btn btn-primary btn-start"><i class="bi bi-play-fill"></i> Launch Doom Emulator</a>
     <a href="./doomII/index.html" class="btn btn-primary btn-start"><i class="bi bi-play-fill"></i> Launch Doom II Emulator</a>
@@ -132,7 +132,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
     </div>
   <noscript>
   <div style="text-align: center; padding: 20px; background-color: #0a0a0a; color: #f00; font-family: 'Courier New', Courier, monospace; border: 2px dashed #f00; border-radius: 10px; max-width: 500px; margin: 50px auto;">
-    <h2 style="margin: 0; font-size: 1.5rem;">🚨 ERROR: JS MISSING 🚨</h2>
+    <h2 style="margin: 0; font-size: 1.5rem;"><i class="bi bi-patch-exclamation-fill"></i>🚨 ERROR: JS MISSING 🚨<i class="bi bi-patch-exclamation-fill"></i></h2>
     <p style="margin: 10px 0; font-size: 1rem;">
       This is an **emulator for DOOM**. You know, the game that runs on *everything*? Even toasters?  
     </p>
@@ -140,7 +140,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
       But it won’t run here because JavaScript is OFF. What are you, a Cyberdemon trying to sabotage this?  
     </p>
     <p style="margin: 10px 0; font-size: 1rem;">
-      Flip the JS switch, and let’s get DOOM-ing! 🔥
+    <i class="bi bi-filetype-js"></i> Flip the JS switch, and let’s get DOOM-ing! 🔥
     </p>
     <small style="font-size: 0.8rem;">(Or just stare at this box. Your move, Doom Slayer.)</small>
   </div>
