--- a/index.html
+++ b/index.html
@@ -130,19 +130,38 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
          </div>
         </div>
     </div>
-  <noscript>
+ <noscript>
   <div style="text-align: center; padding: 20px; background-color: #0a0a0a; color: #f00; font-family: 'Courier New', Courier, monospace; border: 2px dashed #f00; border-radius: 10px; max-width: 500px; margin: 50px auto;">
     <h2 style="margin: 0; font-size: 1.5rem;"><i class="bi bi-patch-exclamation-fill"></i>🚨 ERROR: JS MISSING 🚨<i class="bi bi-patch-exclamation-fill"></i></h2>
     <p style="margin: 10px 0; font-size: 1rem;">
       This is an **emulator for DOOM**. You know, the game that runs on *everything*? Even toasters?  
     </p>
     <p style="margin: 10px 0; font-size: 1rem;">
-      But it won’t run here because JavaScript is OFF. What are you, a Cyberdemon trying to sabotage this?  
+      But it won’t run here because JavaScript is OFF. Are you trying to bring about the Apocalypse yourself?
     </p>
     <p style="margin: 10px 0; font-size: 1rem;">
-    <i class="bi bi-filetype-js"></i> Flip the JS switch, and let’s get DOOM-ing! 🔥
+      <i class="bi bi-filetype-js"></i> Flip the JS switch, and let’s get DOOM-ing! 🔥
     </p>
     <small style="font-size: 0.8rem;">(Or just stare at this box. Your move, Doom Slayer.)</small>
+
+    <p style="margin: 10px 0; font-size: 1rem;">
+      <i class="bi bi-laptop"></i> DOOM only runs if your browser doesn’t think it’s from the *1990s*. Enable JavaScript, and let’s do this.
+    </p>
+    <p style="margin: 10px 0; font-size: 1rem;">
+      <i class="bi bi-person-dash"></i> What’s wrong, Slayer? Too scared to face Doom with JavaScript? Guess you’re more of a *Zombieman*.
+    </p>
+    <p style="margin: 10px 0; font-size: 1rem;">
+      <i class="bi bi-gem"></i> You wouldn’t dare try this in Doom 64, so why try it here without JavaScript? Enable it, and let's *rip and tear*.
+    </p>
+    <p style="margin: 10px 0; font-size: 1rem;">
+      <i class="bi bi-bug"></i> Oh, so you think you can run Doom without JavaScript? You must be one of those demons that *thinks* they can win. 
+    </p>
+    <p style="margin: 10px 0; font-size: 1rem;">
+      <i class="bi bi-caret-right-fill"></i> A Doom Slayer without JavaScript is like a chainsaw without gas. Still cool, but kinda useless. Fix it.
+    </p>
+    <p style="margin: 10px 0; font-size: 1rem;">
+      <i class="bi bi-shield-lock"></i> Don’t leave me hanging, Doom Slayer. Enable JavaScript and let’s get to the *real* demons.
+    </p>
   </div>
 </noscript>
 <script src="./bootstrap.bundle.min.js"></script>
