--- a/dos.html
+++ b/dos.html
@@ -38,7 +38,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 <script type="importmap">
   {
     "imports": {
-      "scriptprocessornodeshim": "https://linuxfandudeguy.github.io/shim-audiocontext-scriptprocessornode/scriptprocessornodeshim.mjs"
+      "scriptprocessornodeshim": "../shim-audiocontext-scriptprocessernode/scriptprocessernodeshim.mjs"
     }
   }
   </script>
