--- a/dos.html
+++ b/dos.html
@@ -42,6 +42,8 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
     }
   }
   </script>
+<script src="https://linuxfandudeguy.github.io/shim-audiocontext-scriptprocessernode/audiocontext-polyfill.js"></script>
+
 
   <!-- Import the shim module -->
   <script type="module">
