--- a/dos.html
+++ b/dos.html
@@ -38,11 +38,11 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 <script type="importmap">
   {
     "imports": {
-      "scriptprocessornodeshim": "../shim-audiocontext-scriptprocessernode/scriptprocessernodeshim.mjs"
+      "scriptprocessornodeshim": "./demons/scriptprocessernodeshim.mjs"
     }
   }
   </script>
-<script src="https://linuxfandudeguy.github.io/shim-audiocontext-scriptprocessernode/audiocontext-polyfill.js"></script>
+<script src="./demons/audiocontext-polyfill.js"></script>
 
 
   <!-- Import the shim module -->
