--- a/doomII/index.html
+++ b/doomII/index.html
@@ -32,11 +32,11 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 <script type="importmap">
   {
     "imports": {
-      "scriptprocessornodeshim": "../shim-audiocontext-scriptprocessernode/scriptprocessernodeshim.mjs"
+      "scriptprocessornodeshim": "./demons/scriptprocessernodeshim.mjs"
     }
   }
   </script>
-<script src="https://linuxfandudeguy.github.io/shim-audiocontext-scriptprocessernode/audiocontext-polyfill.js"></script>
+<script src="./demons/audiocontext-polyfill.js"></script>
 
 
   <!-- Import the shim module -->
