--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Doom Online</title>
+  <title>Doom Emulator</title>
   <!-- There are no bugs in this code...just demons. -->
  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="description" content="Experience the classic Doom game in your browser using js-dos, Bun, and modern web technologies.">
